--- a/Novo/tchimo-frontend/src/pages/Classes/Classroom/Classroom.module.css
+++ b/Novo/tchimo-frontend/src/pages/Classes/Classroom/Classroom.module.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    width: 100%;
+    margin: 0 0.7em;
 }
 
 .timeUntilEnd {
@@ -10,7 +10,6 @@
     border-radius: 0.3em;
     color: #316993;
     font-weight: bold;
-    margin-left: 0.8em;
 }
 
 .pdfButton {
@@ -65,4 +64,5 @@
     text-align: center;
     border-radius: 0.4em;
     font-weight: 600;
+    font-size: 0.9em;
 }
